# GitGuard-AI

./: .dockerignore  .env.example  LICENSE  README.md  dockerfile  main.py  pyproject.toml
gitguard/api/: main.py
gitguard/mcp/: README.md  create_mcp.py  secret_detection_script.py
landing_page/: README.md  package.json
landing_page/app/: globals.css  layout.tsx
landing_page/app/api/test/: route.ts
landing_page/backend/: README.md  detector.py  pyproject.toml
landing_page/components/: competitive-comparison.tsx  floating-particles.tsx  footer.tsx  hero-section.tsx  roi-calculator.tsx  team-section.tsx  theme-provider.tsx
landing_page/frontend/: README.md
landing_page/frontend/app/: page.tsx
landing_page/frontend/app/api-test/: page.tsx
landing_page/frontend/components/: cta-section.tsx  navigation.tsx  problem-stats.tsx  technical-advantage.tsx  theme-toggle.tsx
tests/: test.py
trae-plugin/: README.md  pyproject.toml  requirements.txt
trae-plugin/gitguard/mcp/: README.md
trae-plugin/gitguard/utils/: llm_detect.py  regex_detector.py
trae-plugin/tests/: novita-hf.py  zilliz.py
