[project]
name = "gitguard-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.8.0",
    "huggingface-hub>=0.33.0",
    "novita-client>=0.7.1",
    "pydantic>=2.11.5",
    "pymilvus>=2.5.11",
    "uvicorn>=0.34.3",
]
