[project]
name = "backend"
version = "0.1.0"
description = "Backend endpoint for GitGuard landing page"
authors = [
    {name = "nmbodrick",email = "mariosantossilva982@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "huggingface-hub (>=0.33.0,<0.34.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
